fix: align dialog paddings

--- a/packages/frontend/src/components/dialogs/ProxyConfiguration/styles.module.scss
+++ b/packages/frontend/src/components/dialogs/ProxyConfiguration/styles.module.scss
@@ -63,7 +63,7 @@ $iconSize: 1.3em;
 .buttonsContainer {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .buttons {
